--- a/cardflip/cardflipStyles.css
+++ b/cardflip/cardflipStyles.css
@@ -4,6 +4,11 @@
     color:#ffadc2;
 }
 
+#pickcardfooter {
+    text-align: center;
+    font-family:'Courier New', Courier, monospace;
+    color:#ffadc2;
+}
 
 
 
