added footers and changed card font size

--- a/styles/cardflipStyles.css
+++ b/styles/cardflipStyles.css
@@ -119,4 +119,13 @@
     text-decoration: none;
   }
 
+  #card-text-head {
+    font-size: 20pt;
+    font-family:
+  }
+
+  #card-text-content {
+
+  }
+
   /*end link styling*/
